--- a/ImportData.ipynb
+++ b/ImportData.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,42 +82,33 @@
     "import_rooms = \"\"\"\n",
     "        LOAD CSV WITH HEADERS FROM 'file:///Rooms.csv' AS row\n",
     "        WITH row WHERE row.Room IS NOT NULL\n",
-    "        MERGE (r:Room {name:row.Room, capacity:row.Capacity, type:row.Type})\n",
+    "        MERGE (r:Room {name:row.Room, capacity:coalesce(row.Capacity, 'Unknown'), type:coalesce(row.Type,'Unknown')})\n",
+    "\"\"\"\n",
+    "import_blocks = \"\"\"\n",
+    "        LOAD CSV WITH HEADERS FROM 'file:///Blocks.csv' AS row\n",
+    "        WITH row WHERE row.Block IS NOT NULL\n",
+    "        MERGE (r:Block {name:row.Block, startTime: row.startTime, endTime: row.endTime})\n",
+    "\"\"\"\n",
+    "\n",
+    "import_teachers = \"\"\"\n",
+    "        LOAD CSV WITH HEADERS FROM 'file:///Teachers.csv' AS row\n",
+    "        WITH row WHERE row.Teacher IS NOT NULL\n",
+    "        MERGE (r:Teacher {name:row.Teacher})\n",
     "\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"LOAD CSV WITH HEADERS FROM 'file:///SPINChoice.csv' AS row\\n        WITH row WHERE row.Choice IS NOT NULL\\n        MERGE (s:SPIN {SPIN:row.Choice})\\n\""
+       "<neo4j._sync.work.result.Result at 0x1765182e0>"
       ]
      },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "format(import_choices.format('Choice'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<neo4j._sync.work.result.Result at 0x2aadfa830>"
-      ]
-     },
-     "execution_count": 60,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +133,10 @@
     "execute(import_student_WANTS_spins.format(\"IntensiveChoice01\", 10))\n",
     "execute(import_student_WANTS_spins.format(\"IntensiveChoice02\", 8))\n",
     "execute(import_student_WANTS_spins.format(\"IntensiveChoice03\", 6))\n",
-    "execute (import_student_level)"
+    "execute (import_student_level)\n",
+    "execute(import_rooms)\n",
+    "execute(import_blocks)\n",
+    "execute(import_teachers)"
    ]
   },
   {
