Rooms & Teachers refactored

--- a/Pydantic.ipynb
+++ b/Pydantic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,73 @@
     "    name: str = 'John Doe'\n",
     "    signup_ts: datetime | None\n",
     "    tastes: dict[str, PositiveInt]\n",
-    "\n"
+    "\n",
+    "external_data = {\n",
+    "    'id': 123,\n",
+    "    'signup_ts': '2018-04-01 12:22',\n",
+    "    'tastes': {\n",
+    "        'wine': 9,\n",
+    "        b'cheese': 7,\n",
+    "        'cabbage': '1'\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user = User(**external_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(user.id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'properties': {'id': {'title': 'Id', 'type': 'integer'},\n",
+       "  'name': {'default': 'John Doe', 'title': 'Name', 'type': 'string'},\n",
+       "  'signup_ts': {'anyOf': [{'format': 'date-time', 'type': 'string'},\n",
+       "    {'type': 'null'}],\n",
+       "   'title': 'Signup Ts'},\n",
+       "  'tastes': {'additionalProperties': {'exclusiveMinimum': 0,\n",
+       "    'type': 'integer'},\n",
+       "   'title': 'Tastes',\n",
+       "   'type': 'object'}},\n",
+       " 'required': ['id', 'signup_ts', 'tastes'],\n",
+       " 'title': 'User',\n",
+       " 'type': 'object'}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "User.model_json_schema()"
    ]
   },
   {
