--- a/neo4j_Import_Data.ipynb
+++ b/neo4j_Import_Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,8 +41,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Queries\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,13 +62,14 @@
     "import_students = \"\"\"\n",
     "        LOAD CSV WITH HEADERS FROM 'file:///SPINChoice.csv' AS row\n",
     "        WITH row WHERE row.FirstName IS NOT NULL\n",
-    "        MERGE (s:Student {firstName:row.FirstName, lastName:row.LastName})\n",
+    "        MERGE (s:Student {id: apoc.create.uuid(), firstName:row.FirstName, lastName:row.LastName})\n",
     "\"\"\"\n",
     "\n",
     "import_SPINs = \"\"\"\n",
     "        LOAD CSV WITH HEADERS FROM 'file:///SPINChoice.csv' AS row\n",
     "        WITH row WHERE row.{0} IS NOT NULL\n",
     "        MERGE (s:SPIN {{SPIN:row.{0}}})\n",
+    "        ON CREATE SET s.id = apoc.create.uuid()\n",
     "\"\"\"\n",
     "\n",
     "import_student_WANTS_spins = \"\"\"\n",
@@ -82,33 +90,33 @@
     "import_rooms = \"\"\"\n",
     "        LOAD CSV WITH HEADERS FROM 'file:///Rooms.csv' AS row\n",
     "        WITH row WHERE row.Room IS NOT NULL\n",
-    "        MERGE (r:Room {name:row.Room, capacity:coalesce(row.Capacity, 'Unknown'), type:coalesce(row.Type,'Unknown')})\n",
+    "        MERGE (r:Room {id: apoc.create.uuid(), name:row.Room, capacity:coalesce(row.Capacity, 'Unknown'), type:coalesce(row.Type,'Unknown')})\n",
     "\"\"\"\n",
     "import_blocks = \"\"\"\n",
     "        LOAD CSV WITH HEADERS FROM 'file:///Blocks.csv' AS row\n",
     "        WITH row WHERE row.Block IS NOT NULL\n",
-    "        MERGE (r:Block {name:row.Block, startTime: row.startTime, endTime: row.endTime})\n",
+    "        MERGE (r:Block {id: apoc.create.uuid(), name:row.Block, startTime: row.startTime, endTime: row.endTime})\n",
     "\"\"\"\n",
     "\n",
     "import_teachers = \"\"\"\n",
     "        LOAD CSV WITH HEADERS FROM 'file:///Teachers.csv' AS row\n",
     "        WITH row WHERE row.Teacher IS NOT NULL\n",
-    "        MERGE (r:Teacher {name:row.Teacher})\n",
+    "        MERGE (r:Teacher {id: apoc.create.uuid(), name:row.Teacher})\n",
     "\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<neo4j._sync.work.result.Result at 0x16c67fc10>"
+       "<neo4j._sync.work.result.Result at 0x17e4084c0>"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,6 +323,25 @@
    ],
    "source": [
     "execute(import_rooms)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "f43377ba-0ff1-40bf-887d-53b2ba8336df\n"
+     ]
+    }
+   ],
+   "source": [
+    "import uuid\n",
+    "id = uuid.uuid4()\n",
+    "print(id)"
    ]
   },
   {
