--- a/neo4j_Import_Data.ipynb
+++ b/neo4j_Import_Data.ipynb
@@ -4,7 +4,19 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'neo4j'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mneo4j\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m GraphDatabase\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mNeo4j\u001b[39;00m:\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, uri, user, password):\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'neo4j'"
+     ]
+    }
+   ],
    "source": [
     "from neo4j import GraphDatabase\n",
     "\n",
@@ -21,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,9 +111,10 @@
     "\"\"\"\n",
     "\n",
     "import_teachers = \"\"\"\n",
-    "        LOAD CSV WITH HEADERS FROM 'file:///Teachers.csv' AS row\n",
-    "        WITH row WHERE row.Teacher IS NOT NULL\n",
-    "        MERGE (r:Teacher {id: apoc.create.uuid(), name:row.Teacher})\n",
+    "        LOAD CSV WITH HEADERS FROM 'file:///AllTeachersList2024Jan.csv' AS row\n",
+    "        WITH row WHERE row.nameRomaji IS NOT NULL\n",
+    "        MERGE (r:Teacher {id: randomUUID(), name:row.nameRomaji, \n",
+    "        nameJP:row.nameJP, SPINStrength:coalesce(row.SPINStrength, \"\"), email:row.email})\n",
     "\"\"\""
    ]
   },
