--- a/neo4j_Import_Data.ipynb
+++ b/neo4j_Import_Data.ipynb
@@ -8,13 +8,14 @@
    "source": [
     "from neo4j import GraphDatabase\n",
     "\n",
-    "class Neo4j:\n",
     "\n",
+    "class Neo4j:\n",
     "    def __init__(self, uri, user, password):\n",
     "        self.driver = GraphDatabase.driver(uri, auth=(user, password))\n",
     "\n",
     "    def close(self):\n",
     "        self.driver.close()\n",
+    "\n",
     "\n",
     "neo4j = Neo4j(\"bolt://localhost:7687\", \"neo4j\", \"password\")"
    ]
@@ -26,6 +27,7 @@
    "outputs": [],
    "source": [
     "# neo4j.driver.execute_query(\"MATCH (p) RETURN p LIMIT 2\")\n",
+    "\n",
     "\n",
     "def execute(query):\n",
     "    with neo4j.driver.session() as session:\n",
@@ -49,12 +51,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "clean_up = \"MATCH (n) DETACH DELETE n\"\n",
-    "show_all = \"MATCH (n) RETURN n\"\n",
+    "# clean_up = \"MATCH (n) DETACH DELETE n\"\n",
+    "# show_all = \"MATCH (n) RETURN n\"\n",
     "\n",
     "# Import files: /Users/enioohmaye/Library/Application Support/Neo4j Desktop/Application/relate-data/dbmss/dbms-41d35f05-e4e0-4f5a-a04e-64b41bb80839/import\n",
     "\n",
@@ -68,16 +70,16 @@
     "import_SPINs = \"\"\"\n",
     "        LOAD CSV WITH HEADERS FROM 'file:///SPINChoice.csv' AS row\n",
     "        WITH row WHERE row.{0} IS NOT NULL\n",
-    "        MERGE (s:SPIN {{name:row.{0}}})\n",
-    "        ON CREATE SET s.id = apoc.create.uuid()\n",
+    "        MERGE (c:Course {{name:row.{0}}})\n",
+    "        ON CREATE SET c.id = apoc.create.uuid()\n",
     "\"\"\"\n",
     "\n",
     "import_student_WANTS_spins = \"\"\"\n",
     "        LOAD CSV WITH HEADERS FROM 'file:///SPINChoice.csv' AS row\n",
     "        WITH row WHERE row.FirstName IS NOT NULL\n",
     "        MATCH (stud:Student) WHERE row.FirstName = stud.firstName and row.LastName = stud.lastName\n",
-    "        MATCH (spin:SPIN) WHERE spin.name = row.{0}\n",
-    "        CREATE (stud)-[wants:WANTS {{ranking:{1}, choice:'{0}'}}]->(spin)\n",
+    "        MATCH (course:Course) WHERE course.name = row.{0}\n",
+    "        CREATE (stud)-[wants:WANTS {{ranking:{1}, choice:'{0}'}}]->(course)\n",
     "\"\"\"\n",
     "\n",
     "\n",
@@ -108,22 +110,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<neo4j._sync.work.result.Result at 0x2afbb4370>"
+       "<neo4j._sync.work.result.Result at 0x2a750aec0>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "execute(clean_up)\n",
+    "# execute(clean_up)\n",
     "# execute(show_all)\n",
     "execute(import_students)\n",
     "execute(import_SPINs.format(\"Choice01\"))\n",
@@ -142,10 +144,10 @@
     "execute(import_student_WANTS_spins.format(\"IntensiveChoice01\", 10))\n",
     "execute(import_student_WANTS_spins.format(\"IntensiveChoice02\", 8))\n",
     "execute(import_student_WANTS_spins.format(\"IntensiveChoice03\", 6))\n",
-    "execute (import_student_level)\n",
-    "execute(import_rooms)\n",
-    "execute(import_blocks)\n",
-    "execute(import_teachers)"
+    "# execute (import_student_level)\n",
+    "# execute(import_rooms)\n",
+    "# execute(import_blocks)\n",
+    "# execute(import_teachers)"
    ]
   },
   {
@@ -341,6 +343,7 @@
    ],
    "source": [
     "import uuid\n",
+    "\n",
     "id = uuid.uuid4()\n",
     "print(id)"
    ]
@@ -2318,7 +2321,7 @@
     }
    ],
    "source": [
-    "{'a': 1}.get('b', '-')"
+    "{\"a\": 1}.get(\"b\", \"-\")"
    ]
   },
   {
