--- a/neo4j-to-json.ipynb
+++ b/neo4j-to-json.ipynb
@@ -2,31 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from neo4j import GraphDatabase\n",
     "\n",
-    "class Neo4j:\n",
     "\n",
+    "class Neo4j:\n",
     "    def __init__(self, uri, user, password):\n",
     "        self.driver = GraphDatabase.driver(uri, auth=(user, password))\n",
     "\n",
     "    def close(self):\n",
     "        self.driver.close()\n",
     "\n",
-    "neo4j = Neo4j(\"bolt://localhost:7687\", \"neo4j\", \"password\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def  query(query):\n",
-    "    return  neo4j.driver.execute_query(query)"
+    "\n",
+    "neo4j = Neo4j(\"bolt://localhost:7687\", \"neo4j\", \"password\")\n",
+    "\n",
+    "\n",
+    "def query(query):\n",
+    "    return neo4j.driver.execute_query(query)"
    ]
   },
   {
@@ -100,7 +95,7 @@
     }
    ],
    "source": [
-    "rooms = [record.data()['room'] for record in result.records]\n",
+    "rooms = [record.data()[\"room\"] for record in result.records]\n",
     "rooms"
    ]
   },
@@ -111,6 +106,7 @@
    "outputs": [],
    "source": [
     "from pydantic import BaseModel\n",
+    "\n",
     "\n",
     "class Room(BaseModel):\n",
     "    name: str\n",
