--- a/neo4j_Import_Data.ipynb
+++ b/neo4j_Import_Data.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,16 +110,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<neo4j._sync.work.result.Result at 0x2a750aec0>"
+       "<neo4j._sync.work.result.Result at 0x2a76709a0>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,24 +127,24 @@
    "source": [
     "# execute(clean_up)\n",
     "# execute(show_all)\n",
-    "execute(import_students)\n",
-    "execute(import_SPINs.format(\"Choice01\"))\n",
-    "execute(import_SPINs.format(\"Choice02\"))\n",
-    "execute(import_SPINs.format(\"Choice03\"))\n",
-    "execute(import_SPINs.format(\"Choice04\"))\n",
-    "execute(import_SPINs.format(\"Choice05\"))\n",
-    "execute(import_SPINs.format(\"IntensiveChoice01\"))\n",
-    "execute(import_SPINs.format(\"IntensiveChoice02\"))\n",
-    "execute(import_SPINs.format(\"IntensiveChoice03\"))\n",
-    "execute(import_student_WANTS_spins.format(\"Choice01\", 10))\n",
-    "execute(import_student_WANTS_spins.format(\"Choice02\", 8))\n",
-    "execute(import_student_WANTS_spins.format(\"Choice03\", 6))\n",
-    "execute(import_student_WANTS_spins.format(\"Choice04\", 4))\n",
-    "execute(import_student_WANTS_spins.format(\"Choice05\", 2))\n",
-    "execute(import_student_WANTS_spins.format(\"IntensiveChoice01\", 10))\n",
-    "execute(import_student_WANTS_spins.format(\"IntensiveChoice02\", 8))\n",
-    "execute(import_student_WANTS_spins.format(\"IntensiveChoice03\", 6))\n",
-    "# execute (import_student_level)\n",
+    "# execute(import_students)\n",
+    "# execute(import_SPINs.format(\"Choice01\"))\n",
+    "# execute(import_SPINs.format(\"Choice02\"))\n",
+    "# execute(import_SPINs.format(\"Choice03\"))\n",
+    "# execute(import_SPINs.format(\"Choice04\"))\n",
+    "# execute(import_SPINs.format(\"Choice05\"))\n",
+    "# execute(import_SPINs.format(\"IntensiveChoice01\"))\n",
+    "# execute(import_SPINs.format(\"IntensiveChoice02\"))\n",
+    "# execute(import_SPINs.format(\"IntensiveChoice03\"))\n",
+    "# execute(import_student_WANTS_spins.format(\"Choice01\", 10))\n",
+    "# execute(import_student_WANTS_spins.format(\"Choice02\", 8))\n",
+    "# execute(import_student_WANTS_spins.format(\"Choice03\", 6))\n",
+    "# execute(import_student_WANTS_spins.format(\"Choice04\", 4))\n",
+    "# execute(import_student_WANTS_spins.format(\"Choice05\", 2))\n",
+    "# execute(import_student_WANTS_spins.format(\"IntensiveChoice01\", 10))\n",
+    "# execute(import_student_WANTS_spins.format(\"IntensiveChoice02\", 8))\n",
+    "# execute(import_student_WANTS_spins.format(\"IntensiveChoice03\", 6))\n",
+    "execute(import_student_level)\n",
     "# execute(import_rooms)\n",
     "# execute(import_blocks)\n",
     "# execute(import_teachers)"
